@@ -1,3 +1,8 @@
+2006-06-13  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* Makefile.am: Use -pkg:mono-nunit to reference nunit assemblies.
+	Added self-test target to promote compliance ;-)
+
 2006-03-17  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* Makefile.am: New. Build Gendarme.Rules.Portability rules and tests.
